# tudu

./: .tudu  Cargo.toml  Gemini.md  README.md  diesel.toml
migrations/2025-07-21-163338_todo_projects/: down.sql  up.sql
src/: arg.rs  config.rs  error.rs  lib.rs  main.rs  schema.rs
src/display/: display.rs  hex.rs  message.rs  mod.rs  text.rs
src/infrastructure/: database.rs  env.rs
src/project/: command.rs  mod.rs  sql.rs
src/todo/: command.rs  group.rs  mod.rs  sql.rs
